--- a/Sem1/Sem1FinalProject/signup.css
+++ b/Sem1/Sem1FinalProject/signup.css
@@ -1,11 +1,47 @@
 body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
     font-family: 'Mukta Malar'
 }
 
-/* a {
-    cursor: pointer;
-} */
+
+.nav-bar {
+    height: 50px;
+    width: 130px;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    background-color: pink;
+    border-radius: 20px;
+}
+
+.nav-bar .clickable {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;  
+}
+
+.nav-bar a {
+    text-decoration: none;
+    color: black;
+    font-weight: 600;
+    font-size: x-large;
+    border-bottom: 3px solid transparent;
+    transition: 0.8s;
+}
+
+.nav-bar a:hover {
+    border-color: rgb(0, 0, 0);
+}
+
+.nav-bar .clickable img{
+    width: 40px ;    
+    height: 40px;
+}
 
 #form {
     width: 300px;
@@ -21,15 +57,6 @@ body {
     text-align: center;
 }
 
-/* #form a {
-    padding: 10px;
-    margin-top: 10px;
-    width: 100%;
-    color: white;
-    background-color: rgb(41, 57, 194);
-    border: none;
-    border-radius: 4px;
-} */
 
 .box {
     display: flex;
