--- a/Sem1/Sem1FinalProject/landingPage.css
+++ b/Sem1/Sem1FinalProject/landingPage.css
@@ -35,6 +35,10 @@ body {
     padding-left: 20px;
 }
 
+.nav-bar .logo .clickable p {
+    font-size: 150%;
+}
+
 .logo .clickable img{
     width: 30%;
 }
