--- a/Sem1/Sem1FinalProject/menu2.css
+++ b/Sem1/Sem1FinalProject/menu2.css
@@ -58,6 +58,8 @@ body {
     width: 100%;
     height: 100vh;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     align-items: center;
     background: rgb(64, 98, 69);
@@ -168,4 +170,8 @@ body {
 .next img {
     width: 40px;
     height: 40px;
+}
+
+.bottom img{
+    height: 30px;
 }
