--- a/Sem1/Sem1FinalProject/signup.css
+++ b/Sem1/Sem1FinalProject/signup.css
@@ -3,7 +3,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+    background: linear-gradient(to right, #0f2718, #31694b, #266439);
     font-family: 'Mukta Malar'
 }
 
