--- a/Sem1/Sem1RetakeTest/Problem2/problem2.css
+++ b/Sem1/Sem1RetakeTest/Problem2/problem2.css
@@ -3,8 +3,8 @@
 } */
 
 .container {
-    width: 90vw;
-    height: 90vh;
+    width: 800px;
+    height: 500px;
     background-color: gray;
     border-radius: 10px;
     border: 10px;
@@ -13,16 +13,20 @@
     flex-direction: column;
 }
 
-.colors .color-display {
-    width: 100px;
-    height: 100px;
-    background-color: rgb(255, 255, 0);
+.colors {
+    display: flex;
+
+}
+
+#color-display {
+    width: 300px;
+    height: 300px;
+    background-color: rgb(0, 0, 0);
 }
 
 .colors .color-picker {
-    width: 200px;
-    height: 100px;
-    background-image: linear-gradient(to left, yellow, black);
+    width: 600px;
+    height: 300px;
 }
 
 
