--- a/Sem2/4_props/tutorial/ReactTutorial/src/Card.css
+++ b/Sem2/4_props/tutorial/ReactTutorial/src/Card.css
@@ -39,3 +39,18 @@
     color: black;
 }
 
+.card-input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid gray;
+    border-radius: 8px;
+    margin-top: 10px;
+}
+
+.card-button {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+}
+
