--- a/Sem2/8_sideEffectWUseEffect/Sem2Mid/src/App.css
+++ b/Sem2/8_sideEffectWUseEffect/Sem2Mid/src/App.css
@@ -1,4 +1,25 @@
+
+
+.new-release {
+    color: #FFF;
+}
+
 .new-release-content {
     display: flex;
     justify-content: space-between;
+    width: 1170px;
+    height: 361px;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+
+h2 {
+    margin-top: 29px;
+    margin-bottom: 29px;
+    font-family: Poppins;
+    font-size: 36px;
+    font-weight: 600;
+    line-height: 32px;
+    text-align: left;
+
 }
