Catify: Home Layout

--- a/Sem2/Semester2Project2.0/sem2project/src/components/layout/MusicPlayer.css
+++ b/Sem2/Semester2Project2.0/sem2project/src/components/layout/MusicPlayer.css
@@ -4,7 +4,25 @@
     box-sizing: border-box;
 }
 
-/* .musicPlayer {
+.musicPlayer {
     text-align: center;
-    width: 50vw;
-} */
+    width: 100vw;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.musicPlayer-song {
+    height: 50px;
+    width: 175px;
+}
+
+.musicPlayer-song img {
+    width: 50px;
+}
+
+button {
+    height: 30px;
+    background-color: grey;
+}
