--- a/Sem2/Semester2Project2.0/sem2project/src/components/layout/Layout.css
+++ b/Sem2/Semester2Project2.0/sem2project/src/components/layout/Layout.css
@@ -1,35 +1,45 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .layout {
-    display: flex;
-    flex-direction: column;
+  display: grid;
+  grid-template-rows: auto 10vh;
+  grid-template-columns: 15vw 85vw;
+  grid-template-areas:
+    "homeNavBar outlet"
+    "musicPlayer musicPlayer";
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  gap: 5px;
+  overflow-x: hidden;
 }
 
-.layout .homeNavBar {
-    display: flex;
-}
-/* .layout {
-    display: grid;
-    grid-template-columns: 100px, 800px;
-    grid-template-rows: 90vh auto;
-}
 .homeNavBar {
-    width: 10vw;
-    grid-column: 1;
-    grid-row: 1;
+  position: absolute;
+  z-index: 1;
+  width: 15vw;
+  height: 100vh;
+  grid-area: homeNavBar;
+  background-color: black;
 }
 
 .outlet {
-    grid-column: 2;
-    grid-row: 1;
+  grid-area: outlet;
+  overflow: scroll;
+  border: 2px solid black;
 }
 
 .musicPlayer {
-    grid-column: 1 / span 2;
-} */
-
-
+  position: absolute;
+  z-index: 1;
+  grid-area: musicPlayer;
+  color: whitesmoke;
+  background-color: black;
+  display: flex;
+  align-items: flex-end;
+  width: 100%;
+}
