--- a/Sem2/Semester2Project2.0/sem2project/src/components/layout/NavBar.css
+++ b/Sem2/Semester2Project2.0/sem2project/src/components/layout/NavBar.css
@@ -5,22 +5,36 @@
 }
 
 .navbar {
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bolder;
+  font-size: x-large;
   display: flex;
   gap: 550px;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   justify-content: center;
   align-items: center;
 }
 
 .navbar-logo {
-  width: 70px;
-  height: 70px;
-  /* padding-left: 160px; */
+  width: 80px;
+  height: 80px;
+}
+
+.navbar-logo a {
+  text-decoration: none;
 }
 
 .navbar-logo-img {
   width: 70px;
   height: 70px;
+  border: 1px solid black;
+  border-radius: 35px;
+}
+
+.navbar-logo-link {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .navbar-ul {
@@ -30,7 +44,7 @@
   margin-left: 100px;
 }
 
-.navbar-ul-right{
+.navbar-ul-right {
   display: flex;
   list-style-type: none;
   gap: 60px;
@@ -46,10 +60,12 @@
   font-size: larger;
   font-weight: bold;
   border-bottom: 2px solid transparent;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bolder;
+  font-size: x-large;
 }
-.navbar-li a:hover{
+.navbar-li a:hover {
   text-decoration: none !important;
   border-bottom: 2px solid white;
   transition: 0.5s;
 }
-
