--- a/Sem2/Semester2Project2.0/sem2project/src/components/about/About.css
+++ b/Sem2/Semester2Project2.0/sem2project/src/components/about/About.css
@@ -9,8 +9,10 @@
     padding: 0 40px 0 40px;
     border: 2px solid black;
     border-radius: 10px;
+    text-align: start;
 }
 
 .about-ul {
     list-style-type: none;
+    text-align: start;
 }
