--- a/Sem2/Semester2Project2.0/sem2project/src/components/layout/HomeNavBar.css
+++ b/Sem2/Semester2Project2.0/sem2project/src/components/layout/HomeNavBar.css
@@ -1,16 +1,80 @@
 .homeNavbar {
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bolder;
-    font-size: x-large;
-    margin-left: 20px ;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bolder;
+  font-size: x-large;
+  margin-left: 20px;
+  position: relative;
+}
+
+a {
+  color: #76c356;
+}
+
+.navbar-logo a {
+    text-decoration: none;
+}
+.navbar-logo a:hover{
+    color: #76c356;
 }
 
 .navbar-logo-link {
-    display: flex;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
-.homeNavbar-ul, .homeNavbar-ul-playlists {
-    list-style-type: none;
+.homeNavbar-ul,
+.homeNavbar-ul-playlists {
+  list-style-type: none;
+}
+
+.homeNavbar-createPlaylistBtn {
+  border-radius: 5px;
+  background-color: black;
+  border: none;
+  transition: 0.5s;
+}
+
+.homeNavbar-createPlaylistBtn:hover {
+  background-color: #76c356;
+  color: black;
+}
+
+.confirm-dialog {
+  border-radius: 4px;
+  background-color: black;
+  padding: 5px;
+  position: absolute;
+  top: 2vh;
+  left: 50vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.confirm-dialog button {
+  width: 100%;
+  border-radius: 5px;
+  transition: 0.5s;
+}
+
+.confirm-dialog button:hover {
+  background-color: #76c356;
+  color: black;
+}
+
+.homeNavbar-li-homeLink a,
+.homeNavbar-li-library a,
+.homeNavbar-li-playlist a {
+  border-radius: 5px;
+  text-decoration: none;
+  transition: 0.5s;
+}
+
+.homeNavbar-li-homeLink a:hover,
+.homeNavbar-li-library a:hover,
+.homeNavbar-li-playlist a:hover {
+  background-color: #76c356;
+  color: black;
 }
