--- a/Sem2/Semester2Project2.0/sem2project/src/components/layout/MusicPlayer.css
+++ b/Sem2/Semester2Project2.0/sem2project/src/components/layout/MusicPlayer.css
@@ -1,28 +1,75 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .musicPlayer {
-    text-align: center;
-    width: 100vw;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  text-align: center;
+  width: 100vw;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .musicPlayer-song {
-    height: 50px;
-    width: 175px;
+  height: 50px;
+  width: 200px;
+  display: grid;
+  align-items: center;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50% 50%;
+  grid-template-areas:
+    "songCover songTitle"
+    "songCover songArtists";
+}
+
+.musicPlayer-songCover {
+  grid-area: songCover;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin-left: 20px;
+}
+.musicPlayer-songTitle {
+  top: 0;
+  font-weight: bolder;
+  font-size: 15px;
+  grid-area: songTitle;
+}
+.musicPlayer-songArtists {
+  grid-area: songArtists;
+  font-size: 15px;
+}
+
+.musicPlayer-player-btn {
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+  align-items: center;
+}
+
+.musicPlayer-progress {
+  display: flex;
+  margin-top: 30px;
+  width: 500px;
 }
 
 .musicPlayer-song img {
-    width: 50px;
+  width: 70px;
 }
 
-button {
-    height: 30px;
-    background-color: grey;
+.musicPlayer-player button {
+  width: 30px;
+  height: 30px;
+  background-color: black;
+  padding: 2px;
+  border: none;
+  margin-left: 2px;
+  margin-right: 2px;
+}
+
+.musicPlayer-player button img {
+  width: 40px;
+  height: 40px;
 }
