--- a/Sem2/Semester2Project2.0/sem2project/src/components/layout/NavBar.css
+++ b/Sem2/Semester2Project2.0/sem2project/src/components/layout/NavBar.css
@@ -9,32 +9,11 @@
   font-weight: bolder;
   font-size: x-large;
   display: flex;
-  gap: 550px;
+  gap: 30%;
   background-color: rgb(0, 0, 0);
   justify-content: center;
   align-items: center;
-}
-
-.navbar-logo {
-  width: 80px;
-  height: 80px;
-}
-
-.navbar-logo a {
-  text-decoration: none;
-}
-
-.navbar-logo-img {
-  width: 70px;
-  height: 70px;
-  border: 1px solid black;
-  border-radius: 35px;
-}
-
-.navbar-logo-link {
-  display: flex;
-  align-items: center;
-  gap: 10px;
+  margin: 0;
 }
 
 .navbar-ul {
